2017-09-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Factor <sys/time.h> duplicate content out of winsock headers.

	* include/sys/time.h: Assert copyright; tidy layout.
	[_BEGIN_C_DECLS, _END_C_DECLS]: Use them to avoid C++ name mangling.
	[__WINSOCK_H_SOURCED__] (_SYS_TIME_H): Do not define it; hence...
	[!defined _SYS_TIME_H]: ...selectively expose definitions for only...
	(timerclear, timerisset, timercmp): ...these functional macros, and...
	(struct timeval): ...this data type; inhibit redefinition on...
	[defined _SYS_TIME_H && _WINSOCK_H]: ...second reading.
	(_TIMEVAL_DEFINED): Do not define; it isn't required.

2017-09-09  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Factor BSD non-standard type definitions into common header.

	* profile/gmon.h [_BSDTYPES_DEFINED]: Delete block; include...
	* include/sys/bsdtypes.h: ...this new file instead; it defines...
	(u_char, u_int, u_long, u_short): ...these non-standard data types.

	* profile/gmon.c profile/mcount.c [_BSD_SOURCE]: Declare it;
	it suppresses warnings from <sys/bsdtypes.h>, about ill-advised
	non-standard BSD typedef usage.

2017-07-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare and tag for release of MinGW.org WSL-5.0.1

	* All files (wsl-5.0.1-release): Tag assigned.

2017-07-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Automate testsuite dependency generation.

	* tests/Makefile.in (testsuite) [$srcdir/*.at]: Automatically
	enumerate all such wildcard matches as prerequisites, instead of...
	(headers.at, ansiprintf.at, logarithms.at, powerfunc.at): ...these,
	which were previously enumerated explicitly.

2017-06-05  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Automatically correct obsolete _XOPEN_SOURCE usage.

	* include/_mingw.h.in (__paste, __valueless): New macros; define them.
	(_XOPEN_SOURCE) [defined with no value]: Use them to attempt to deduce
	this obsolete usage; if detected, redefine it with a default assigned